--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "crypto": "^1.0.1",
     "ejs": "^3.1.6",
     "express": "^4.17.3",
+    "moment": "^2.29.1",
     "morgan": "^1.10.0",
     "path": "^0.12.7",
     "pg-promise": "^10.11.1",
